--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,4 +16,5 @@ body {
 @import '../../../node_modules/normalize.css/normalize';
 @import './modules/sidebar';
 @import './modules/content';
+@import './modules/modal';
 @import './media';
