--- a/src/assets/scss/modules/_modal.scss
+++ b/src/assets/scss/modules/_modal.scss
@@ -94,6 +94,7 @@
         padding: 0;
         margin: 0;
         font-family: 'Open Sans', sans-serif;
+        font-weight: 500;
     }
 
     &__text {
