modal window fix

--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -226,7 +226,7 @@
         // modal_success
         &_success {
             .modal__content {
-                width: 95%;
+                max-width: 80%;
             }
         }
 
