--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -182,6 +182,10 @@
             font-size: 12px;
         }
 
+        &__additional-info {
+            font-size: 11px;
+        }
+
         &__footer {
             position: unset;
 
