remember me button

--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -186,6 +186,12 @@
             font-size: 11px;
         }
 
+        &__checkbox {
+            label {
+                font-size: 14px;
+            }
+        }
+
         &__footer {
             position: unset;
 
