--- a/src/assets/scss/modules/_content.scss
+++ b/src/assets/scss/modules/_content.scss
@@ -342,9 +342,63 @@
         }
     }
 
+    &__checkbox {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        margin-top: 1rem;
+
+        font-family: var(--font);
+        text-align: left;
+
+        input[type='checkbox'] {
+            cursor: pointer;
+            opacity: 0;
+            position: absolute;
+        }
+
+        label {
+            display: flex;
+            align-items: center;
+
+            cursor: pointer;
+            line-height: 1;
+
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+            -moz-user-select: none; /* Old versions of Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Edge, Opera and Firefox */
+
+            &::before {
+                content: '';
+                width: 1rem;
+                height: 1rem;
+                margin-right: 0.5rem;
+                border-radius: .15rem;
+                border: .05rem solid black;
+                // transition: all .1s linear;
+            }
+        }
+
+        & input[type='checkbox']:checked + label::before {
+            content: '✓';
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            color: #fff;
+            background: #24243E;
+            border-color: #24243E;
+            font-size: 14px;
+        }
+    }
+
     &__issue {
         display: block;
-        margin-top: 2.7rem;
+        margin-top: 1.7rem;
 
         font-family: var(--font);
         font-style: normal;
