fixed input background-color

--- a/src/assets/scss/modules/_content.scss
+++ b/src/assets/scss/modules/_content.scss
@@ -194,6 +194,7 @@
         border: 1px solid #757575;
         display: flex;
         align-items: center;
+        background: #fff;
 
         img {
             position: absolute;
@@ -218,6 +219,7 @@
             color: #424242;
             border: none;
             outline: none;
+            background: #fff;
 
             // background-image: url('../images/user.svg');
             // background-repeat: no-repeat;
